successfully adding new user bt with null roles

--- a/user-auth/src/main/resources/application.properties
+++ b/user-auth/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/MyAuth
 
+spring.main.allow-circular-references=true
+
+# spring.main.allow-circular-references: true
+
 
 # Using generated security password: 03d34ded-3ff6-4d88-bf5d-528382560424
