now adding users with roles

--- a/user-auth/src/main/resources/application.properties
+++ b/user-auth/src/main/resources/application.properties
@@ -6,3 +6,15 @@ spring.main.allow-circular-references=true
 
 
 # Using generated security password: 03d34ded-3ff6-4d88-bf5d-528382560424
+
+
+
+
+
+# add roles without nullpointer error
+
+# add user with roles added as well  // working
+
+# user not found when tryna access home with token auth in header // working
+
+
